# mental_health_analyzer

./: .gitignore  How-to-test-the-app.txt  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
cleaning_notebooks/: clean_raw_data.ipynb
modeling_notebooks/advanced_model/: train_deep_learning_models.ipynb
modeling_notebooks/base_model/: train_a_catboost_model.ipynb
production/: inference_on_new_data.ipynb
