[project]
name = "dsti-deeplearning-project"
version = "0.1.0"
description = ""
authors = [
    {name = "'dsti-deep-learning-2025'"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "huggingface-hub (>=0.35.1,<0.36.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "hf-xet (>=1.1.10,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "emoji (>=2.15.0,<3.0.0)",
    "emot (>=3.1,<4.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "datasets (>=2.20)",
    "evaluate (>=0.4.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dill (>=0.4.0,<0.5.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "protobuf (>=6.33.0,<7.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
